--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
   }
 }
