--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "express": "^4.19.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "server": "file:",
+    "uuid": "^10.0.0",
+    "ws": "^8.18.0"
   }
 }
